@@ -1,3 +1,9 @@
+2009-06-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* dep-in.sed: Don't use \n in replacement part of s command.
+	* Makefile.am (DEP1): LC_ALL for uniq.
+	* Makefile.in: Regenerate.
+
 2009-06-01  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* scripttempl/elf.sc (PLT): Add "*(.iplt)".
