@@ -1,3 +1,9 @@
+2009-06-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* dep-in.sed: Don't use \n in replacement part of s command.
+	* Makefile.am (DEP1): LC_ALL for uniq.
+	* Makefile.in: Regenerate.
+
 2009-06-02  Nick Clifton  <nickc@redhat.com>
 
 	* po/nl.po: Updated Dutch translation.
